--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,1 +1,12 @@
 @import '../../styles/colors.scss';
+
+.card {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  border-radius: 8px;
+  overflow: hidden;
+  margin-top: 171px;
+}
